--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "classroom-screen",
+  "name": "openclassboard",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
